Changes in version 1.8.0
------------------------

- Support for off-target reads in copy number normalization and segmentation
- Added mutation burden calculation
- Code cleanups (switch to GRanges where possible, switch to optparse in 
  command line tools)
- More robust mapping bias estimation
- Added support for CNVkit coverage files (*.cnn, *.cnr)
- IntervalFile.R can annotate targets with gene symbols
- Better artifact filtering by using normalDB more efficiently
- Support for mappability scores
- Coverage calculation can now include duplicates 
- Segments are now flagged when allele-specific copy number is unreliable
  due to insufficient number of high quality variants.

API CHANGES

- Due to novel optimizations of provided bait intervals, we recommend 
  to regenerate the normal databases.
- New functions: annotateTargets, callMutationBurden
- Defunct functions: createSNPBlacklist, getDiploid, autoCurateResults,
    readCoverageGatk
- Changed defaults: 
    - min.normals 2 (from 4) in setMappingBiasVcf
    - normalDB.min.coverage 0.25 (from 0.2) in filterTargets
    - log.ratio.calibration 0.1 (from 0.25) in runAbsoluteCN; now 
      relative to purity, not log-ratio noise
- Minor changes: 
    - Removed gc.data from filterTargets since gc_bias is now added to tumor 
      coverage
    - dropped purecn.output from correctCoverageBias (no two-pass anymore)
    - Coverage.R argument --gatkcoverage renamed to --coverage
    - Dropped GC-normalization functionality in NormalDB, since this is 
      now conveniently done in Coverage.R
    - Renamed PureCN.R --outdir argument to --out. Can now specify a file
      prefix as in GATK. Filenames are thus not forced to sample id anymore.  
      If --out is a directory, it will behave like before and will use
      out/sampleid_suffix as filename.
 
PLANNED FEATURES FOR 1.8

- Better sample summary statistics, like mutation burden, chromosomal 
  instability
- Better performance in low purity samples 