@@ -1,0 +1,5 @@
+chr1    100 250
+chr1    300 650
+chr2    0   150
+chr2    400 550
+chr2    700 750
