@@ -1,0 +1,5 @@
+chr1	0	250	.	1	.
+chr1	250	650	.	1	.
+chr2	0	150	.	0.7	.
+chr2	150	550	.	1	.
+chr2	550	750	.	1	.
