@@ -1,0 +1,22 @@
+>chr1
+TTCCTAAGGGTCAGATAGGCTCTGCGAGCCGCACTTCACTTGACGAAGAATTCTAGTTGTGATTATGATACCCTTCCTGC
+CGAACAGACCTGTCTCAGTATAATAAGACCAATTAAATGATAAAAGCAGAACAATAGTAGCGAACCCAACTCGCGACCAA
+TGTCGTGCCGTATGAACCACTATACACAATCTCGAACTTGCGCGGCGTTTGAGAATGTCCCCTACGCAACAGCTCAGATG
+CGGTAGGTATAAGTAGTCCCATTGGCTGTTTCTGAGTCTTCATAGTCACGAACTACGCTAAGTCTAGGACGTGAGGCCAC
+GAAAATATTGAAATCCGCTATTCACGTTTCAATGCTATACGTAAGCTTCGAAGTTTCTCTAGAAACGATAACTTACTTCT
+ACGTGGCTTTCCCTCCGTTGGAGCCCCCGTGCCGGCTGGAGGACGCCCCAGTCACACATGAGCCGATCCATCACTCCCAG
+GGAGGGTTAATGAAGACTCTTGGTGCGTCTATTTAGTCAGAAACGATCCGCTTTGAAATGATTCCTTGAGGAGGTGTGAC
+CTTGAGTATACTCCGCGGGCGAGGATCCACATTGGCGGGAAGGAAAAACCGTGGTCTGCATATCCTGTGTACAGCCATTG
+CTAGGGCTCAGCAACGCTTCCCTGCCTAATCTGCACGGATCGAAGGTTGACTCGCCGTGAAATCGTGGCGACCCGCGTGC
+GTATGGGGGTAAACGCGACTCTTATGTGCTCTAAGCTGGCAGTTGCATTCAGCTCCGTGCGGCGATGCGCACTGTCCCGT
+>chr2
+ACGGGAATGGTCAGACCGTGCCCCAAAATCCTCTGGCAGCTCTCACGATGCTAGACACTTGTTGCAAACCTCCTTCGACA
+ACTCAAGGCTTGCGACACCAAGCGAAAATCCAGTTGCAACCGACGGGCGCGAGTCTAGGTGCTGGCGGCGACAGTGCGTA
+ACCGTGGTCGGGGATCTATGCGTCGGATGCTTAACACAATAGCGTTGCCTACATTCACGTATGGTCATGCGGCGTAAGCA
+CTACCACGCAAATCACCGTGCAGGGCCGTGTTCGACACCCTCGACTGATTGTAGCCCATAGTAGATCAGTCTGGATCGAA
+AGCGTGCTGAAGCAATTGCCCATTGTCACATGAATCGGTTTCGAAGGAAACTATAGATGTAACGTAGGCCGGGTATCAGG
+GACGCATGAGTACCACGCTCAAGCGGGGGCTCTAGTGGATTGGTGGATTGATATTTTGCCGATTTTGCACTTCAACCAGC
+TTCTGACCATCACAAAACCGAAGGTCGTTTTTTTTTGGTTAACGAAACTCAAGGTCCGAGAGTGGCGATCGAGTTGAACT
+AAAAGATCGTTCTAGATGAACTTTACCAGATACAGCCAGGGCTCACATAACTTTCACTTCTATGGGTGGTTTTTCATCAT
+TCACAATACGACAACCAAAGAGCTAAACCTCGGGCTTGTCATTGCAAATGTCCCAGACGTTTGTTCAAAATTAACTCGAG
+ACACTGATGGATCCGCAAATTAAGAGGATAACTGTTTTACGCGCGGTCTCATAGACTTGTCGTACCCAAGTCCTTTGAGA
