@@ -1,0 +1,2 @@
+chr1	800	6	80	81
+chr2	800	822	80	81
